:sparkles: serve static pages
